...
    <!-- Misc -->
    <string name="aisle">Aisle</string>
    <string name="product">Product</string>
    <string name="add_product">Add Product</string>
    <string name="search">Search</string>
    <string name="product_name">Product Name</string>
    <string name="save">Save</string>
    <string name="shop_name">Shop Name</string>
    <string name="add_location">Add Shop</string>
    <string name="edit_product">Edit Product</string>
    <string name="pin_shop">Pin Shop to Drawer</string>
    <string name="show_unmapped_products">Show Products in the \'No Aisle\' section</string>
    <string name="add_aisle">Add Aisle</string>
...
    <string name="sync_session_signed_in_as">Signed in as %1$s</string>
    <string name="last_sync">Last sync</string>
    <string name="sync_on_mobile_data">Sync on mobile data</string>
    <string name="manage_account">Manage Account</string>
    <string name="sync_service_dialog_info">Specify the Aisleron sync service connection details.</string>
    <string name="sync_service_address">Sync service address</string>
    <string name="sync_service_address_title">Sync Service Address</string>
    <string name="sync_service_public_key">Public Key</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="sync_service_connecting_to">Connecting to</string>
    <string name="sync_service_sign_up_message">Sign in to the Aisleron Sync service to keep your shopping lists up to date across all your devices.</string>
    <string name="aisleron_sync_subtitle">Sync through the shops!</string>
    <string name="sync_service_custom">Custom sync service</string>
    <string name="manual_sync_scheduled">Manual sync scheduled</string>
    <string name="sync_status_success">Success</string>
...
